# greenwaste-dataset-curator

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: greenwaste_queries.json
src/greenwaste_dataset_curator/: __init__.py  cli.py  commons.py  dedupe.py  manifest.py  models.py  quality.py  splitting.py  yolo.py
tests/: test_commons_retry.py  test_manifest.py  test_quality.py  test_splitting.py
